...
        }}
      />
      <Tab.Screen
        name="WardenStudents"
        component={WardenStudentsScreen}
        options={{
          tabBarLabel: 'Students',
          tabBarAccessibilityLabel: 'Students',
        }}
      />
    </Tab.Navigator>
  );
};
...
